linked to index.html

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <section>
         <h1>Informacion acerca mi</h1>
         <p>Nombre: Carlos Diaz br Direccion: Carrer de jose 4 br Cel: 603444555 </p>
+        <a href="/index.html">Enlace a index</a>
 
     </section>
     
